Revert one change to show settings[show_blocks]

--- a/app/views/settings/_ckeditor.html.erb
+++ b/app/views/settings/_ckeditor.html.erb
@@ -23,6 +23,7 @@
 </p>
 <p>
   <%= content_tag :label, l(:ckeditor_startup_show_blocks) %>
+  <%= hidden_field_tag "settings[show_blocks]", 0 %>
   <%= check_box_tag "settings[show_blocks]", 1, RedmineCkeditorSetting.show_blocks %>
 </p>
 <p>
